--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,9 @@ td {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
   border-radius: 50% solid black;
   color: black;
+  margin: auto;
+  padding: 0;
+  vertical-align: middle;
 }
 
 td[id^="1,"] {
@@ -122,34 +125,40 @@ td .stone {
   height: 85%;
   border-radius: 50%;
   margin: auto;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 td .stone .dot {
   width: 35%;
   height: 35%;
   border-radius: 50%;
   margin: auto;
+  vertical-align: middle;
 }
 
-td .stone .ko {
-  
+td .stone[data-stone="ko"] {
+  background-color: transparent;
+  border: 1vmin solid red;
 }
-td .stone .white {
-  
+td .stone[data-stone="white"] {
+  background-color: white;
 }
-td .stone .black {
+td .stone[data-stone="black"] {
   background-color: black;
 }
-td .stone .transparent {
-
+td .stone[data-stone="none"] {
+  background-color: transparent;
 }
-td .dot .white {
-
+td .dot[data-dot="white"] {
+  background-color: white;
 }
-td .dot .black {
-
+td .dot[data-dot="black"] {
+  background-color: black;
 }
-td .dot .transparent {
-
+td .dot[data-dot="none"] {
+  background-color: transparent;
 }
 td .dot .dame {
 
