--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  vertical-align: middle;
+}
+
+body {
+  display: block;
 }
 
 .full-screen {
@@ -12,21 +17,27 @@
     "b-player-info*2 w-player-info*2" <- name, rank, rank-certainty
     "record record record options" <- displays numbered record (stretch!), new game, get game record(stretch!)
     pre-game record will display instructions
-   */
+    */
 }
 
 content {
   background-color: #61a6c2;
-  display: grid;
+  /* display: grid;
   grid-template-columns: 100vmin;
   grid-template-rows: 1fr 100vmin 1fr;
   grid-template-areas:
     "white-pos"
     "board-space"
-    "black-pos"
+    "black-pos"; */
+  display: flex;
+  flex-direction: column; 
+  /* justify-content: flex-end; */
+  justify-content: space-between !important;
+  justify-items: stretch !important;
 }
 
 .player-pos {
+  /* flex-grow: 2; */
   display: flex;
   align-content: center;
   align-items: center;
@@ -34,11 +45,12 @@ content {
 }
 
 .player-pos#white-pos {
-  grid-area: white-pos;
+  /* grid-area: white-pos; */
+  
 }
 
 .player-pos#black-pos {
-  grid-area: black-pos;
+  /* grid-area: black-pos; */
   flex-direction: row-reverse;
 }
 
@@ -48,20 +60,26 @@ content {
 
 .bowl {
   order: -1;
-  margin: 20px;
+  margin: 1vh;
   height: 8vh;
   width: 8vh;
-  border: solid black;
+  /* border: solid black; */
   border-radius: 50%;
+  background-color: rgb(116, 48, 17);
 }
 
 .caps {
   order: 1;
+  margin: 1vh;
+  height: 6vh;
+  width: 6vh;
+  border-radius: 50%;
+  background-color: rgb(116, 48, 17);
 }
 
 #board-space {
   margin: 0 auto;
-  grid-area: board-space;
+  /* grid-area: board-space; */
   display: flex;
   flex-direction: column;
   background-color: #EAB24E;
@@ -90,11 +108,11 @@ td {
   vertical-align: middle;
 }
 
-td[id^="1,"] {
+td[id^="1"] {
   background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%);
 }
 
-#row-9 td {
+td[id^="9"] {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%); 
 }
 
@@ -107,17 +125,17 @@ td[id$="9"] {
 }
 
 td[id="1,1"] {
-  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%);
+  background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%);
 }
 
 td[id="1,9"] {
-  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
+  background: conic-gradient( rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76% );
 }
 td[id="9,1"] {
-  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
+  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 99%, #000 100%);
 }
 td[id="9,9"] {
-  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
+  background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
 td .stone {
