--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,9 @@
   margin: 0;
   vertical-align: middle;
 }
-
 body {
-  display: block;
+  height: vh;
+  width: vw;
 }
 
 .full-screen {
@@ -29,19 +29,21 @@ content {
     "white-pos"
     "board-space"
     "black-pos"; */
-  display: flex;
+  display: flex !important;
   flex-direction: column; 
   /* justify-content: flex-end; */
   justify-content: space-between !important;
-  justify-items: stretch !important;
+  /* justify-items: stretch !important; */
+  height: 100vh;
+  width: 100vw;
 }
 
 .player-pos {
   /* flex-grow: 2; */
   display: flex;
-  align-content: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex: 5;
 }
 
 .player-pos#white-pos {
@@ -52,6 +54,7 @@ content {
 .player-pos#black-pos {
   /* grid-area: black-pos; */
   flex-direction: row-reverse;
+  justify-self: flex-end;
 }
 
 #kifu {
@@ -63,14 +66,14 @@ content {
 }
 
 #kifu table {
-
+  
 }
 
 .bowl {
   order: -1;
   margin: 1vh;
-  height: 8vh;
-  width: 8vh;
+  height: 10vh;
+  width: 10vh;
   /* border: solid black; */
   border-radius: 50%;
   background-color: rgb(116, 48, 17);
@@ -94,14 +97,12 @@ content {
   display: flex;
   flex-direction: column;
   background-color: #EAB24E;
-  width: 90vmin;
-  height: 90vmin;
+  /* width: 90vmin; */
+  /* height: 90vmin; */
   padding: 1vmin;
   z-index: 1;
   box-shadow: -2vmin 4vmin 3vmin rgba(145, 92, 23, 0.5);
-}
-
-#board-space::after {
+  flex: 1;
 }
 
 #board-space table {
