--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,13 @@ body {
   display: flex;
   position: fixed;
   z-index: 2;
-  display: none;
+  /* display: none; */
   width: 100vw;
   height: 100vh;
   background-color: rgba(0,0,0,0.3);
   align-items: center;
   justify-content: center;
+  visibility: hidden;
 }
 
 #menu {
@@ -98,6 +99,7 @@ content {
   color: #FFF;
   background-color: rgba(0,0,0,0.3);
   padding: .5em;
+  cursor: grab;
 }
 
 .bowl[data-turn] {
@@ -168,19 +170,19 @@ content {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td[id="1,1"] {
+#board-space td[id="1-1"] {
   background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%);
 }
 
-#board-space td[id="1,9"] {
+#board-space td[id="1-9"] {
   background: conic-gradient( rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76% );
 }
 
-#board-space td[id="9,1"] {
+#board-space td[id="9-1"] {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td[id="9,9"] {
+#board-space td[id="9-9"] {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
