--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ h1 {
 
 h4 {
   font-weight: 600;
-  margin: 1em .25em 0 .25em;
+  margin: 1em .25em 1em .25em;
   font-size: 110%;
 }
 
@@ -87,6 +87,13 @@ h4 {
 
 #player-meta input[type="button"] {
   margin: .25em;
+}
+
+#player-meta * .menu-line {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: baseline;
+  justify-items: flex-start;
 }
 
 div[data-player-meta] {
@@ -142,22 +149,6 @@ height: 1;
   margin: .5em;
   display: flex;
   justify-content: space-between;
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]:focus
-{
-
-}
-
-.rank-tick {
-  
-}
-
-.rank-tick li {
-  position: relative;
-  display: flex;
-  flex-wrap: none;
 }
 
 content {
@@ -411,7 +402,7 @@ td .dot .seki {
 
 }
 
-@media only screen and (min-width: 560px) {
+@media only screen and (min-width: 591px) {
 
   #player-meta {
     flex-direction: row;
@@ -428,7 +419,7 @@ td .dot .seki {
 }
 
 @media only screen and (min-width: 500px) {
-  
+
   html {
     font-size: 14px;
   }
