--- a/css/main.css
+++ b/css/main.css
@@ -301,8 +301,8 @@ content {
 }
 
 #board-space td {
-  height: 9vmin;
-  width: 9vmin;
+  height: 6vmin;
+  width: 6vmin;
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
   border-radius: 50% solid black;
   color: black;
@@ -311,35 +311,35 @@ content {
   vertical-align: middle;
 }
 
-#board-space td[id^="1"] {
+#board-space td.top {
   background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%);
 }
 
-#board-space td[id^="9"] {
+#board-space td.btm {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%); 
 }
 
-#board-space td[id$="1"] {
+#board-space td.lft {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td[id$="9"] {
+#board-space td.rgt {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td[id="1-1"] {
+#board-space td.top.lft {
   background: conic-gradient( rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%);
 }
 
-#board-space td[id="1-9"] {
+#board-space td.top.rgt {
   background: conic-gradient( rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76% );
 }
 
-#board-space td[id="9-1"] {
+#board-space td.btm.lft {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td[id="9-9"] {
+#board-space td.btm.rgt {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
@@ -423,58 +423,6 @@ td .dot .seki {
     height: 14vh;
   }
   
-  #kifu {
-    order: 0;
-    height: 12vh;
-    width: 9vh;
-    background-color: #FFF;
-    transform: rotate(-20deg);
-  }
   
-  .bowl {
-    margin: 2vh;
-    height: 12vh;
-    width: 12vh;
-  }
-  
-  .caps-space {
-    margin: 1vh;
-    height: 8vh;
-    width: 8vh;
-  }
-  
-  #board-space {
-    margin: 0 auto;
-    /* grid-area: board-space; */
-    display: flex;
-    flex-direction: column;
-    background-color: #EAB24E;
-    /* width: 90vmin; */
-    /* height: 90vmin; */
-    padding: 1vmin;
-    z-index: 1;
-    box-shadow: -2vmin 4vmin 3vmin rgba(145, 92, 23, 0.5);
-    flex: 1;
-  }
-  
-  #board-space table {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    height: 72vmin;
-    width: 72min;
-    margin: auto;
-  }
-  
-  #board-space td {
-    height: 8vmin;
-    width: 8vmin;
-    background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 24%, #000 25%, rgba(0,0,0,0) 26%, rgba(0,0,0,0) 49%, #000 50%, rgba(0,0,0,0) 51%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
-    border-radius: 50% solid black;
-    color: black;
-    margin: auto;
-    padding: 0;
-    vertical-align: middle;
-  }
 
 }
