--- a/css/main.css
+++ b/css/main.css
@@ -358,11 +358,11 @@ content {
   background: conic-gradient(#000 0%, rgba(0,0,0,0) 1%, rgba(0,0,0,0) 74%, #000 75%, rgba(0,0,0,0) 76%, rgba(0,0,0,0) 99%, #000 100%);
 }
 
-#board-space td * * div.hoshi { /* to be added later */
-  background: radial-gradient(circle farthest-corner at center, #000 0%, #000 30%, rgba(0,0,0,0) 50%);
+.dot.hoshi { /* to be added later */
+  background: radial-gradient(circle farthest-corner at center, #000 0%, #000 44%, rgba(0,0,0,0) 45%);
   z-index: 3;
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
 td .stone {
